--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<p align="left">Here are some HTML presentations I prepared during 2025.</p>
-					<p align="left">These were made using reveal.js and are served as GitHub pages.</p>
+					<p align="left">Here are some HTML presentations I prepared during 2025. 
+					These were made using <a href="">reveal.js</a> and are served as <a href="https://pages.github.com">GitHub pages</a>".</p>
 					<ul>
 						<li><a href="demo.html">demo</a></</li>
 						<li><a href="test.html">Extracting insect wingbeat waveforms from slow motion videos</a></li>
